--- a/index.html
+++ b/index.html
@@ -73,6 +73,30 @@
         button:hover {
             background-color: #ff6699;
         }
+    
+    input[type="file"], input[type="text"], select {
+    width: 90%;
+    padding: 10px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    font-size: 16px;
+    font-family: 'Arial', sans-serif;
+    transition: all 0.3s ease;
+}
+
+input[type="file"]:hover, input[type="text"]:hover, select:hover {
+    border-color: #ff6699;
+    box-shadow: inset 0 1px 5px rgba(255, 102, 153, 0.5);
+}
+
+input[type="file"]:focus, input[type="text"]:focus, select:focus {
+    outline: none;
+    border-color: #ff3366;
+    box-shadow: 0 0 8px rgba(255, 51, 102, 0.5);
+}
+
     </style>
 </head>
 <body>
