--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@ input[type="file"]:focus, input[type="text"]:focus, select:focus {
     <div class="container">
         <!-- Upload Section -->
         <div class="upload-section" id="uploadSection">
-            <h2>Upload Your Photo, Audio, and Enter Your Details</h2>
+            <h1>Optimized Greeting Card</h1>
+            <h2>Upload Photo, Song and Enter Your name</h2>
             <input type="file" id="imageInput" accept="image/*" required>
             <input type="file" id="audioInput" accept="audio/*" required>
             <input type="text" id="nameInput" placeholder="Enter your name" required>
